--- a/Buoi17/ClassShapes/ClassShapes.csproj
+++ b/Buoi17/ClassShapes/ClassShapes.csproj
@@ -43,9 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CircleComparer.cs" />
     <Compile Include="ComparableCircle.cs" />
+    <Compile Include="IColorable.cs" />
+    <Compile Include="IComparer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resizeable.cs" />
     <Compile Include="Shape.cs" />
   </ItemGroup>
   <ItemGroup>
